--- a/Programming/Second Term/Tema 7/Ex6/Ejercicio06CentroEscolar/Ejercicio06CentroEscolar.csproj
+++ b/Programming/Second Term/Tema 7/Ex6/Ejercicio06CentroEscolar/Ejercicio06CentroEscolar.csproj
@@ -76,14 +76,25 @@
       <DependentUpon>fInicial.cs</DependentUpon>
     </Compile>
     <Compile Include="CourseList.cs" />
+    <Compile Include="fStudents.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fStudents.Designer.cs">
+      <DependentUpon>fStudents.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ListaCursos.cs" />
+    <Compile Include="StudentList.cs" />
+    <Compile Include="Student.cs" />
     <EmbeddedResource Include="fCursos.resx">
       <DependentUpon>fCursos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="fInicial.resx">
       <DependentUpon>fInicial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="fStudents.resx">
+      <DependentUpon>fStudents.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
