--- a/Programming/Second Term/Tema 7/Ex6/Ejercicio06CentroEscolar/Ejercicio06CentroEscolar.csproj
+++ b/Programming/Second Term/Tema 7/Ex6/Ejercicio06CentroEscolar/Ejercicio06CentroEscolar.csproj
@@ -82,11 +82,19 @@
     <Compile Include="fStudents.Designer.cs">
       <DependentUpon>fStudents.cs</DependentUpon>
     </Compile>
+    <Compile Include="fTeachers.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fTeachers.Designer.cs">
+      <DependentUpon>fTeachers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ListaCursos.cs" />
     <Compile Include="StudentList.cs" />
     <Compile Include="Student.cs" />
+    <Compile Include="Teacher.cs" />
+    <Compile Include="TeachersList.cs" />
     <EmbeddedResource Include="fCursos.resx">
       <DependentUpon>fCursos.cs</DependentUpon>
     </EmbeddedResource>
@@ -95,6 +103,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="fStudents.resx">
       <DependentUpon>fStudents.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="fTeachers.resx">
+      <DependentUpon>fTeachers.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
