--- a/Programming/Second Term/Tema 7/Ex6/Ejercicio06CentroEscolar/Ejercicio06CentroEscolar.csproj
+++ b/Programming/Second Term/Tema 7/Ex6/Ejercicio06CentroEscolar/Ejercicio06CentroEscolar.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Course.cs" />
+    <Compile Include="CustomFunctions.cs" />
     <Compile Include="fCursos.cs">
       <SubType>Form</SubType>
     </Compile>
