--- a/Programming/Second Term/Tema 8/Ex2/Ex1/Ex2.csproj
+++ b/Programming/Second Term/Tema 8/Ex2/Ex1/Ex2.csproj
@@ -48,6 +48,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Circle.cs" />
+    <Compile Include="Circulo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Circulo.Designer.cs">
+      <DependentUpon>Circulo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Figure.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -55,11 +61,23 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FSquarecs.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FSquarecs.Designer.cs">
+      <DependentUpon>FSquarecs.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Square.cs" />
+    <EmbeddedResource Include="Circulo.resx">
+      <DependentUpon>Circulo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FSquarecs.resx">
+      <DependentUpon>FSquarecs.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
