--- a/Programming/Second Term/Tema 8/Ex2/Ex1/Ex2.csproj
+++ b/Programming/Second Term/Tema 8/Ex2/Ex1/Ex2.csproj
@@ -47,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddEquilaterTriangle.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddEquilaterTriangle.Designer.cs">
+      <DependentUpon>AddEquilaterTriangle.cs</DependentUpon>
+    </Compile>
     <Compile Include="Circle.cs" />
     <Compile Include="Circulo.cs">
       <SubType>Form</SubType>
@@ -54,7 +60,14 @@
     <Compile Include="Circulo.Designer.cs">
       <DependentUpon>Circulo.cs</DependentUpon>
     </Compile>
-    <Compile Include="Figure.cs" />
+    <Compile Include="EquilateralTriangle.cs" />
+    <Compile Include="TypeOfTriangle.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TypeOfTriangle.Designer.cs">
+      <DependentUpon>TypeOfTriangle.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Shape.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,11 +83,17 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Square.cs" />
+    <EmbeddedResource Include="AddEquilaterTriangle.resx">
+      <DependentUpon>AddEquilaterTriangle.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Circulo.resx">
       <DependentUpon>Circulo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TypeOfTriangle.resx">
+      <DependentUpon>TypeOfTriangle.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FSquarecs.resx">
       <DependentUpon>FSquarecs.cs</DependentUpon>
