--- a/Programming/Second Term/Tema 8/Ex2/Ex1/Ex2.csproj
+++ b/Programming/Second Term/Tema 8/Ex2/Ex1/Ex2.csproj
@@ -53,6 +53,12 @@
     <Compile Include="AddEquilaterTriangle.Designer.cs">
       <DependentUpon>AddEquilaterTriangle.cs</DependentUpon>
     </Compile>
+    <Compile Include="AddRectangle.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddRectangle.Designer.cs">
+      <DependentUpon>AddRectangle.cs</DependentUpon>
+    </Compile>
     <Compile Include="Circle.cs" />
     <Compile Include="Circulo.cs">
       <SubType>Form</SubType>
@@ -61,6 +67,7 @@
       <DependentUpon>Circulo.cs</DependentUpon>
     </Compile>
     <Compile Include="EquilateralTriangle.cs" />
+    <Compile Include="Rectangle.cs" />
     <Compile Include="TypeOfTriangle.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -85,6 +92,9 @@
     <Compile Include="Square.cs" />
     <EmbeddedResource Include="AddEquilaterTriangle.resx">
       <DependentUpon>AddEquilaterTriangle.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AddRectangle.resx">
+      <DependentUpon>AddRectangle.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Circulo.resx">
       <DependentUpon>Circulo.cs</DependentUpon>
