--- a/Programming/Second Term/Tema 8/Ex5/Ex5/Ex5.csproj
+++ b/Programming/Second Term/Tema 8/Ex5/Ex5/Ex5.csproj
@@ -61,7 +61,14 @@
     <Compile Include="fInicial.Designer.cs">
       <DependentUpon>fInicial.cs</DependentUpon>
     </Compile>
+    <Compile Include="fStudents.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fStudents.Designer.cs">
+      <DependentUpon>fStudents.cs</DependentUpon>
+    </Compile>
     <Compile Include="Person.cs" />
+    <Compile Include="PersonList.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Student.cs" />
@@ -71,6 +78,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="fInicial.resx">
       <DependentUpon>fInicial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="fStudents.resx">
+      <DependentUpon>fStudents.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
