--- a/Programming/Second Term/Tema 8/Ex5/Ex5/Ex5.csproj
+++ b/Programming/Second Term/Tema 8/Ex5/Ex5/Ex5.csproj
@@ -67,6 +67,12 @@
     <Compile Include="fStudents.Designer.cs">
       <DependentUpon>fStudents.cs</DependentUpon>
     </Compile>
+    <Compile Include="fTeachers.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fTeachers.Designer.cs">
+      <DependentUpon>fTeachers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Person.cs" />
     <Compile Include="PersonList.cs" />
     <Compile Include="Program.cs" />
@@ -81,6 +87,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="fStudents.resx">
       <DependentUpon>fStudents.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="fTeachers.resx">
+      <DependentUpon>fTeachers.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
