--- a/Programming/Second Term/Tema 8/Ex5/Ex5/Ex5.csproj
+++ b/Programming/Second Term/Tema 8/Ex5/Ex5/Ex5.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Course.cs" />
     <Compile Include="CourseList.cs" />
+    <Compile Include="CustomFunctions.cs" />
     <Compile Include="fCursos.cs">
       <SubType>Form</SubType>
     </Compile>
