--- a/LMSGI/Trash/WebDriver/Subscribing NewsLetter WebDriving/Subscribing NewsLetter WebDriving/Subscribing NewsLetter WebDriving.csproj
+++ b/LMSGI/Trash/WebDriver/Subscribing NewsLetter WebDriving/Subscribing NewsLetter WebDriving/Subscribing NewsLetter WebDriving.csproj
@@ -55,7 +55,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Buttons.cs" />
+    <Compile Include="Button.cs" />
+    <Compile Include="Driver.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XMLReader.cs" />
