--- a/Programming/Third Term/Ex3/Ex3/Ex3/Ex3.csproj
+++ b/Programming/Third Term/Ex3/Ex3/Ex3/Ex3.csproj
@@ -109,12 +109,12 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="AppData\Character.mdf">
+    <Content Include="AppData\character.mdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="AppData\Character_log.ldf">
+    <Content Include="AppData\character_log.ldf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <DependentUpon>Character.mdf</DependentUpon>
+      <DependentUpon>character.mdf</DependentUpon>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
