--- a/Programming/Third Term/Ex3/Ex3/Ex3/Ex3.csproj
+++ b/Programming/Third Term/Ex3/Ex3/Ex3/Ex3.csproj
@@ -67,11 +67,6 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="img\Resource1.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resource1.resx</DependentUpon>
-    </Compile>
     <Compile Include="Models\Character.cs" />
     <Compile Include="Models\SqlDBHelper.cs" />
     <Compile Include="Program.cs" />
@@ -85,20 +80,6 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="img\Resource1.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resource1.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <EmbeddedResource Include="ViewCharacter.resx">
       <DependentUpon>ViewCharacter.cs</DependentUpon>
     </EmbeddedResource>
@@ -129,14 +110,13 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="AppData\character.mdf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="AppData\character_log.ldf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>character.mdf</DependentUpon>
     </Content>
     <None Include="img\deathknight.gif" />
-    <None Include="img\paladin.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="font\" />
