--- a/Programming/Third Term/Ex3/Ex3/Ex3/Ex3.csproj
+++ b/Programming/Third Term/Ex3/Ex3/Ex3/Ex3.csproj
@@ -61,11 +61,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="CharCRUD.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="CharCRUD.Designer.cs">
+      <DependentUpon>CharCRUD.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\Character.cs" />
     <Compile Include="Models\SqlDBHelper.cs" />
@@ -78,8 +78,8 @@
     <Compile Include="ViewCharacter.Designer.cs">
       <DependentUpon>ViewCharacter.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="CharCRUD.resx">
+      <DependentUpon>CharCRUD.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ViewCharacter.resx">
       <DependentUpon>ViewCharacter.cs</DependentUpon>
