--- a/LMSGI/Tests/SerializingTest/SerializingTest/SerializingTest.csproj
+++ b/LMSGI/Tests/SerializingTest/SerializingTest/SerializingTest.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Button.cs" />
     <Compile Include="Library.cs" />
     <Compile Include="Page.cs" />
+    <Compile Include="PageList.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
