--- a/LMSGI/Trash/WebDriver/Subscribing NewsLetter WebDriving/Subscribing NewsLetter WebDriving/Subscribing NewsLetter WebDriving.csproj
+++ b/LMSGI/Trash/WebDriver/Subscribing NewsLetter WebDriving/Subscribing NewsLetter WebDriving/Subscribing NewsLetter WebDriving.csproj
@@ -57,10 +57,11 @@
   <ItemGroup>
     <Compile Include="Button.cs" />
     <Compile Include="Driver.cs" />
-    <Compile Include="Pagina.cs" />
+    <Compile Include="Manager.cs" />
+    <Compile Include="Page.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Web.cs" />
+    <Compile Include="PageList.cs" />
     <Compile Include="XMLReader.cs" />
   </ItemGroup>
   <ItemGroup>
