--- a/Programming/Third Term/Ex5/Ex5/Ex5.csproj
+++ b/Programming/Third Term/Ex5/Ex5/Ex5.csproj
@@ -67,6 +67,7 @@
       <DependentUpon>characterDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="CustomRegex.cs" />
+    <Compile Include="DataValidator.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
